trying to fix body lang header on mobile

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -69,7 +69,7 @@ h1:first-of-type {
 }
 
 .welc > strong {
-  font-size: 2em;
+  font-size: 3em;
 }
 
 h2 {
